--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
 
-<h1>Hello, DWU!</h1>
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://www.dwu.com.br/" target="_blank">
+        <h1>
+
+            <img src="https://www.dwu.com.br/wp-content/uploads/2020/11/cropped-cropped-Preferencial-3.png" alt="logo-dwu" width="65" height="56" class="d-inline-block align-text-top">
+            
+        </h1>
+        
+      </a>
+      <h1>DWU</h1>
+    <small>IT solutions</small>
+    </div>
+  </nav>
 
 
 <router-outlet />
