--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,18 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <h2>Login</h2>
+        <h6><p>Please, enter your login and password!</p></h6>
         <form (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="username">Usuário</label>
-            <input type="text" class="form-control" name="username" id="username" [(ngModel)]="username" [minLength]="3" required>
+            <input type="text" class="form-control" name="username" id="username" [(ngModel)]="username" required>
           </div>
           <div class="form-group">
             <label for="password">Senha</label>
             <input type="password" class="form-control" name="password" id="password" [(ngModel)]="password" required>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
           </div>
           <button type="submit" class="btn btn-primary">Entrar</button>
         </form>
